# FM-Prototype

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  data_dictionary.py  db.py  schema_discovery.py
app/chatbot/: __init__.py  service.py  ui.py
app/core/: __init__.py  config.py  db.py
app/discovery/: __init__.py  data_dictionary.py  schema_discovery.py
app/evaluation/: __init__.py  corpus.py  dashboard.py  error_taxonomy.py  ground_truth.py  metrics.py  report.py  runner.py  statistics.py
app/llm/: __init__.py  base.py  groq_client.py  json_tool_parser.py  prompt_templates.py
app/tools/: __init__.py  fm_functions.py  models.py  normalization.py  registry.py
app/ui/: __init__.py  eval_dashboard.py  streamlit_app.py
data/evaluation/: corpus.csv  ground_truth.csv  ground_truth.json
data/evaluation/runs/20260614_100248/: error_analysis.md  error_taxonomy.csv  hypothesis_results.json  hypothesis_results.md  metrics.csv  model_comparison.csv  model_comparison.md  raw_results.jsonl  summary.md
data/evaluation/runs/20260616_124339/: raw_results.jsonl
data/logs/: function_calls.jsonl
data/schema_reports/: columns.csv  confirmed_findings.md  data_dictionary.md  foreign_keys.csv  indexes.csv  primary_keys.csv  relevant_candidates.csv  row_counts.csv  sample_values.csv  schema_summary.md  schemas.csv  tables.csv
docs/: architecture.md
tests/: conftest.py  test_candidates.py  test_evaluation.py  test_fm_functions.py  test_json_tool_parser.py  test_normalization.py  test_read_only.py  test_registry.py
